--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
 }
 
 /* main page -- start */
+header {
+    position: fixed;
+    top: 0;
+}
+
 #black-out{
     position: fixed;
     width: 100vw;
@@ -31,7 +36,8 @@
 }
 
 h1 {
-    padding: 10vw;
+    width: 100vw;
+    margin: 10vw auto;
     text-shadow: 0.4vw 0.3vw 0.2vw grey;
     text-align: center;
 }
@@ -74,7 +80,7 @@ h1 {
     height: 25vw;
     margin: 3vw;
     border-radius: 1vw;
-    box-shadow: 2vw 1.5vw 1vw #303030;
+    box-shadow: 2vw 1.5vw 1vw #303030 rgb(74, 21, 125);
 }
 
 .level:hover {
